--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 name: Rafique Daruwalla
 markdown: kramdown
+description: >- 
+  Rafique Daruwalla's Personal Site - As a voracious reader, I plan to use this site to blog and share about anything interesting that 
+  I've come across recently. This includes items like new technology, business or management principles, productivity tips and so on.
+  I plan to summarize this in two to five sentences or bullet points for easy reference - for myself and anyone else out there on the
+  World Wide Web. 
