--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ description: >-
   I've come across recently. This includes items like new technology, business or management principles, productivity tips and so on.
   I plan to summarize this in two to five sentences or bullet points for easy reference - for myself and anyone else out there on the
   World Wide Web. 
+plugins:
+  - jekyll-seo-tag
